# BASIC2.0

./: CMakeLists.txt
Basic/: Basic.cpp  evalstate.cpp  evalstate.h  exp.cpp  exp.h  parser.cpp  parser.h  program.cpp  program.h  statement.cpp  statement.h
StanfordCPPLib/: platform.cpp  strlib.cpp  tokenscanner.h
